Bug 762473 - Don't apply non-reentrant-closure optimization when the scope is extensible (r=dvander)